--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -47,7 +47,7 @@
     <input type="text" class="form-control mb-1" name="description" id="description" value="{{restaurant.description}}">
 
     <a href="/" class="btn btn-light border-dark mx-2 my-3">Back</a>
-    <button type="submit" class="btn btn-secondary border-dark my-3">Edit</button>
+    <button type="submit" class="btn btn-secondary border-dark my-3">Save</button>
 
   </form>
 
