--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,7 +31,7 @@
   <div class="row" id="data-panel">
     {{#each restaurants}}
     <div class="col-sm-3">
-      <a href="/restaurants/{{this._id}}" class="text-secondary">
+      <a href="/{{this._id}}" class="text-secondary">
         <div class="card mb-2">
           <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
           <div class="card-body restaurant-item-body">
