--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,6 +1,6 @@
 <div class="container my-3 p-2">
 
-  <form action="/edit/{{restaurant._id}}?_method=PUT" method="POST">
+  <form action="/restaurant/edit/{{restaurant._id}}?_method=PUT" method="POST">
     <label for="name">
       餐廳名稱
     </label>
