--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,6 +1,6 @@
 <div class="container my-3 p-2">
 
-  <form action="/new" method="POST">
+  <form action="/restaurant/new" method="POST">
 
     <label for="name">
       餐廳名稱
