--- a/views/nothing.hbs
+++ b/views/nothing.hbs
@@ -12,7 +12,7 @@
   <!-- search bar -->
   <div class="row" id="search-bar">
     <div class="col-12">
-      <form action="/search">
+      <form action="/restaurant/search">
         <div class="input-group mb-3">
           <input type="text" name="keyword" class="form-control"
             placeholder="Enter restaurant name or category to search..." value="{{keyword}}"
